--- a/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
+++ b/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
@@ -89,7 +89,7 @@
       </div>
 
       <div class="commentsContainer">
-        <div class="commentsList">
+        <div class="commentsList" *ngIf="commentsList.length > 0; else noCommentsMessage">
           <app-feedback-comment
             *ngFor="let comment of commentsList; let i = index"
             class="comment"
@@ -99,6 +99,11 @@
           >
           </app-feedback-comment>
         </div>
+        <ng-template #noCommentsMessage>
+            <div style="width: 80%; padding-left: 10%;">
+              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment on this story.
+            </div>
+          </ng-template>
       </div>
     </div>
   </div>
