--- a/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
+++ b/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
@@ -101,7 +101,7 @@
         </div>
         <ng-template #noCommentsMessage>
             <div style="width: 80%; padding-left: 10%;">
-              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment on this story.
+              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment for {{story.author}}.
             </div>
           </ng-template>
       </div>
