CRUD for comments

--- a/ngapp/src/app/teacher/feedback-comment/feedback-comment.component.html
+++ b/ngapp/src/app/teacher/feedback-comment/feedback-comment.component.html
@@ -2,7 +2,7 @@
   <div class="textAndOptionsMenuContainer">
     <!-- Writing area-->
     <textarea
-      *ngIf="comment.text.length > 0 || isEditing"
+      *ngIf="comment.text || isEditing"
       #commentTextArea
       class="commentTextArea"
       [(ngModel)]="comment.text"
