--- a/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
+++ b/ngapp/src/app/teacher/teacher-feedback/teacher-feedback.component.html
@@ -1,61 +1,12 @@
-<!-- HEADER -->
-<div class="storyTitleHeader">
-  <!-- CLASSROOM TITLE -->
-  <div class="storyTitleContainer">
-    <div>Classroom Title</div>
-  </div>
-</div>
-
-<!-- CLASSROOM DRAWER BUTTON-->
-<span class="menuButton material-symbols-outlined">menu</span>
-
-<!-- BODY CONTAINER-->
-<mat-drawer-container class="bodyDrawerContainer" autosize>
-  <!-- CLASSROOM LIST DRAWER-->
-
-  <!-- CLASSROOM OPTIONS TOOL BAR -->
-  <div>
-    <div class="teacherOptionsBtnContainer">
-      <!-- SHARE CODE -->
-      <div class="optionsBtn">
-        {{ ts.l.share_code }}
-        <i class="fas fa-share-alt headerIcon"></i>
-      </div>
-
-      <!-- STATISTICS -->
-      <div class="optionsBtn">
-        {{ ts.l.stats }}
-        <i class="fas fa-calculator optionsBtnIcon"></i>
-      </div>
-
-      <!-- MESSAGES -->
-      <div class="optionsBtn">
-        {{ ts.l.messages }}
-        <i class="fa fa-envelope optionsBtnIcon"></i>
-      </div>
-
-      <!-- DICTOGLOSS -->
-      <div class="optionsBtn">
-        {{ ts.l.dictogloss }}
-        <i class="fas fa-file-audio optionsBtnIcon"></i>
-      </div>
-
-      <!-- SETTINGS -->
-      <div class="optionsBtn">
-        {{ ts.l.settings }}
-        <i class="fas fa-cog optionsBtnIcon"></i>
-      </div>
-    </div>
-  </div>
 
   <!-- BODY -->
-  <div class="storyAndCommentsContainer">
+  <div class="feedbackBody">
     <div class="storyTitleContainer">
       <div class="storyTitleAndDate">
-        <div>{{ story.title }}</div>
+        <div>{{ story?.title }}</div>
         <div>({{ story?.date | date : "dd/MM/yyyy, hh:mm aa" }})</div>
       </div>
-      <div><i class="fa-solid fa-times closeFeedbackButton"></i></div>
+      <div (click)="closeFeedbackEmitter.next(true)"><i class="fa-solid fa-times closeFeedbackButton"></i></div>
     </div>
     <div class="quillAndCommentsContainer">
       <div class="quillContainer">
@@ -63,7 +14,7 @@
           placeholder=""
           [preserveWhitespace]="true"
           [debounceTime]="1500"
-          [(ngModel)]="story.feedback.feedbackMarkup"
+          [(ngModel)]="story?.feedback.feedbackMarkup"
           (onEditorCreated)="onEditorCreated($event)"
           (onSelectionChanged)="showInlineCommentButton($event)"
         >
@@ -101,10 +52,10 @@
         </div>
         <ng-template #noCommentsMessage>
             <div style="width: 80%; padding-left: 10%;">
-              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment for {{story.author}}.
+              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment for {{story?.author}}.
             </div>
           </ng-template>
       </div>
     </div>
   </div>
-</mat-drawer-container>
+
