--- a/ngapp/src/app/feedback/feedback-comment/feedback-comment.component.html
+++ b/ngapp/src/app/feedback/feedback-comment/feedback-comment.component.html
@@ -12,7 +12,7 @@
     </textarea>
 
     <!-- Edit comment menu -->
-    <button mat-icon-button [matMenuTriggerFor]="menu">
+    <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="isTeacher">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
