--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
@@ -1,7 +1,7 @@
 
   <!-- BODY -->
   <div class="feedbackBody">
-    <div class="storyTitleContainer">
+    <div class="storyTitleContainer" *ngIf="isTeacher" >
       <div class="storyTitleAndDate">
         <div>{{ story?.title }}</div>
         <div>({{ story?.date | date : "dd/MM/yyyy, hh:mm aa" }})</div>
@@ -11,15 +11,16 @@
     <div class="quillAndCommentsContainer">
       <div class="quillContainer">
         <quill-editor
+        style="height: 100%"
           placeholder=""
           [preserveWhitespace]="true"
           [debounceTime]="1500"
           [(ngModel)]="story?.feedback.feedbackMarkup"
           (onEditorCreated)="onEditorCreated($event)"
-          (onSelectionChanged)="showInlineCommentButton($event)"
+          (onSelectionChanged)="isTeacher ? showInlineCommentButton($event): null"
         >
           <!-- Toolbar styles: https://github.com/quilljs/quill/blob/f75ff2973f068c3db44f949915eb8a74faf162a8/docs/_includes/full-toolbar.html-->
-          <div quill-editor-toolbar>
+          <div quill-editor-toolbar [hidden]="!isTeacher">
             <span class="ql-formats">
               <button class="ql-bold"></button>
               <button class="ql-italic"></button>
@@ -46,6 +47,7 @@
             class="comment"
             (click)="highlightCommentReferenceInQuill(i)"
             [comment]="comment"
+            [isTeacher]="isTeacher"
             (deleteEmitter)="removeComment(i, comment)"
           >
           </app-feedback-comment>
