--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -162,12 +162,12 @@
     height: 80vh;
     width: 100%;
     display:flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
 
 .rightDrawer {
-    width: 25%;
+    min-width: 25%;
     height: 100%;
 }
   
