--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
@@ -1,60 +1,66 @@
-
-  <!-- BODY -->
-  <div class="feedbackBody">
-    <div class="storyFeedbackTitleContainer" *ngIf="isTeacher" >
-        <div style="margin: auto;">{{ story?.title }}</div>
-        <div style=" margin-left: auto;" (click)="updateFeedbackStatus()"><i class="fa-solid fa-times closeFeedbackButton"></i></div>
-    </div>
-    <div class="quillAndCommentsContainer">
-      <div class="quillContainer">
-        <quill-editor
-        style="height: 100%"
-          placeholder=""
-          [preserveWhitespace]="true"
-          [debounceTime]="1500"
-          [(ngModel)]="story?.feedback.feedbackMarkup"
-          (onEditorCreated)="onEditorCreated($event)"
-          (onSelectionChanged)="isTeacher ? showInlineCommentButton($event): null"
-        >
-          <!-- Toolbar styles: https://github.com/quilljs/quill/blob/f75ff2973f068c3db44f949915eb8a74faf162a8/docs/_includes/full-toolbar.html-->
-          <div quill-editor-toolbar [hidden]="!isTeacher">
-            <span class="ql-formats">
-              <button class="ql-bold"></button>
-              <button class="ql-italic"></button>
-              <button class="ql-underline"></button>
-              <button class="ql-strike"></button>
-            </span>
-            <span class="ql-formats">
-              <select class="ql-color"></select>
-              <select class="ql-background"></select>
-            </span>
-            <span class="ql-formats">
-              <button style=" color: white; background-color: var(--scealai-green); border-radius: 25%;" >
-                <i class="fa-solid fa-message" (click)="createComment()"></i>
-              </button>
-            </span>
-          </div>
-        </quill-editor>
-      </div>
-
-      <div class="commentsContainer">
-        <div class="commentsList" *ngIf="commentsList.length > 0; else noCommentsMessage">
-          <app-feedback-comment
-            *ngFor="let comment of commentsList; let i = index"
-            class="comment"
-            (click)="highlightCommentReferenceInQuill(i)"
-            [comment]="comment"
-            [isTeacher]="isTeacher"
-            (deleteEmitter)="removeComment(i, comment)"
-          >
-          </app-feedback-comment>
-        </div>
-        <ng-template #noCommentsMessage>
-            <div style="width: 80%; padding-left: 10%;">
-              Click on the <i class="fa-solid fa-message" style="padding:5px;"></i> icon or highlight a section of text to leave a comment for {{story?.author}}.
-            </div>
-          </ng-template>
-      </div>
+<!-- BODY -->
+<div class="feedbackBody">
+  <div class="storyFeedbackTitleContainer" *ngIf="isTeacher">
+    <div style="margin: auto">{{ story?.title }}</div>
+    <div style="margin-left: auto" (click)="updateFeedbackStatus()">
+      <i class="fa-solid fa-times closeFeedbackButton"></i>
     </div>
   </div>
+  <div class="quillAndCommentsContainer">
+    <div class="quillContainer">
+      <quill-editor
+        [disabled]="!isTeacher"
+        placeholder=""
+        [preserveWhitespace]="true"
+        [debounceTime]="1500"
+        [(ngModel)]="story?.feedback.feedbackMarkup"
+        (onEditorCreated)="onEditorCreated($event)"
+        (onSelectionChanged)=" isTeacher ? showInlineCommentButton($event) : null "
+      >
+        <!-- Toolbar styles: https://github.com/quilljs/quill/blob/f75ff2973f068c3db44f949915eb8a74faf162a8/docs/_includes/full-toolbar.html-->
+        <div quill-editor-toolbar [hidden]="!isTeacher">
+          <span class="ql-formats">
+            <button class="ql-bold"></button>
+            <button class="ql-italic"></button>
+            <button class="ql-underline"></button>
+            <button class="ql-strike"></button>
+          </span>
+          <span class="ql-formats">
+            <select class="ql-color"></select>
+            <select class="ql-background"></select>
+          </span>
+          <span class="ql-formats">
+            <button
+              style="
+                color: white;
+                background-color: var(--scealai-green);
+                border-radius: 25%;
+              "
+            >
+              <i class="fa-solid fa-message" (click)="createComment()"></i>
+            </button>
+          </span>
+        </div>
+      </quill-editor>
+    </div>
 
+    <div class="commentsContainer">
+      <div class="commentsList" *ngIf="commentsList.length > 0; else noCommentsMessage" >
+        <app-feedback-comment
+          *ngFor="let comment of commentsList; let i = index"
+          class="comment"
+          (click)="highlightCommentReferenceInQuill(i)"
+          [comment]="comment"
+          [isTeacher]="isTeacher"
+          (deleteEmitter)="removeComment(i, comment)"
+        >
+        </app-feedback-comment>
+      </div>
+      <ng-template #noCommentsMessage>
+        <div style="width: 80%; padding-left: 10%" *ngIf="isTeacher">
+          Click on the <i class="fa-solid fa-message" style="padding: 5px"></i> icon or highlight a section of text to leave a comment for {{ story?.author }}.
+        </div>
+      </ng-template>
+    </div>
+  </div>
+</div>
