--- a/ngapp/src/app/student/feedback-drawer/feedback-drawer.component.html
+++ b/ngapp/src/app/student/feedback-drawer/feedback-drawer.component.html
@@ -1,21 +1,21 @@
 <div class="feedbackHeader">
-    <div>
-      {{ ts.l.feedback }}
-    </div>
-    <div class="closeFeedbackBtn" (click)="closeFeedbackEmitter.next(true)">
-      <i class="fa fa-times"></i>
-    </div>
+  <div>
+    {{ ts.l.feedback }}
   </div>
-  <!-- Display feedback text and markup-->
-  <div class="textFieldContainer">
-    <!-- feedback text comment -->
+  <div class="closeFeedbackBtn" (click)="closeFeedbackEmitter.next(true)">
+    <i class="fa fa-times"></i>
+  </div>
+</div>
+<!-- Display feedback text and markup-->
+<!-- <div class="textFieldContainer">
+
     <textarea
       class="textField"
       placeholder="{{ ts.l.no_feedback_provided }}"
       readonly
       value="{{ story?.feedback?.text }}">
     </textarea>
-    <!-- Display feedback audio-->
+
     <audio
       *ngIf="audioSource && story?.feedback?.audioId"
       [src]="audioSource"
@@ -25,9 +25,10 @@
       class="audioPlayer"
     ></audio>
     <hr>
-    <!-- feedback story markup -->
+
     <div class="textField" style="text-align: left; padding-left:25%; padding-right:25%;"
       *ngIf="story?.feedback?.feedbackMarkup" 
       [innerHTML]="sanitizer.bypassSecurityTrustHtml(story?.feedback?.feedbackMarkup)" >
     </div>
-  </div>
+  </div> -->
+<app-story-feedback [story]="story"></app-story-feedback>
