--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -155,6 +155,7 @@
   <mat-drawer #rightDrawer class="rightDrawer" mode="side" position="end">
     <!-- FEEDBACK -->
     <app-feedback-drawer
+    *ngIf="selectedDrawer == 'feedback'"
     [story]="story"
     [hasFeedback]="hasFeedback"
     (closeFeedbackEmitter)="toggleRightDrawer('feedback')">
