--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
@@ -19,6 +19,24 @@
     margin-right: auto;
 }
 
+.sendFeedbackButton {
+    border-radius: 4px;
+    border: none;
+    font-size: 10pt;
+    background-color: var(--scealai-green);
+    color: white;
+}
+
+.sendFeedbackButton:hover {
+    cursor: pointer;
+    background-color: var(--scealai-dark-green);
+}
+  
+.sendFeedbackButton:disabled {
+    cursor: auto;
+    background-color: var(--scealai-green);
+}
+
 .closeFeedbackButton {
     margin-left: auto;
     padding-right: 20px;
