check if any markup changes made

--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
@@ -16,7 +16,7 @@
         placeholder=""
         [preserveWhitespace]="true"
         [debounceTime]="1500"
-        [(ngModel)]="story?.feedback.feedbackMarkup"
+        [(ngModel)]="storyTextWithMarkup"
         (onEditorCreated)="onEditorCreated($event)"
         (onSelectionChanged)=" isTeacher ? showInlineCommentButton($event) : null "
       >
