--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
@@ -139,5 +139,7 @@
 .seenByStudent {
     font-size: 10pt;
     color: var(--scealai-light-gray);
-    margin-left: 4px;
+    text-align: left;
+    padding-bottom: 20px;
+    padding-left: 20px;
 }
