--- a/ngapp/src/app/feedback/feedback-comment/feedback-comment.component.html
+++ b/ngapp/src/app/feedback/feedback-comment/feedback-comment.component.html
@@ -22,7 +22,7 @@
       </button>
       <button mat-menu-item (click)="editComment()">
         <mat-icon>create</mat-icon>
-        <span> Edit </span>
+        <span> {{ts.l.edit}} </span>
       </button>
     </mat-menu>
   </div>
