--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -147,7 +147,7 @@
     <ng-template #newStoryMessage>
       <div *ngIf="storiesLoaded" class="newStoryMessage">
         <i class="fas fa-arrow-left fa-3x" style="animation: pulse 2s infinite linear" ></i>
-        <div>Click on the '+' button to create your first story!</div>
+        <div>{{ts.l.create_first_story}}</div>
       </div>
     </ng-template>
   </div>
