--- a/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
+++ b/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="classrooms.length > 0">
     <div class="myStories">{{ ts.l.my_classrooms }}</div>
     <div class="subHeader">
-      <div>{{ts.l.title}}</div><div> No. students</div>
+      <div>{{ts.l.title}}</div><div> {{ts.l.no_of_students}} </div>
     </div>
     <hr />
   </div>
