--- a/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/ngapp/src/app/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -72,7 +72,7 @@
       </div>
       <div *ngIf="classroomsLoaded" class="newStoryMessage">
         <i class="fas fa-arrow-left fa-3x" style="animation: pulse 2s infinite linear; padding-right:20px"></i>
-        <div>Click on the '+' button to create your first classroom!</div>
+        <div>{{ts.l.create_first_classroom}}</div>
       </div>
     </ng-template>
   </div>
