--- a/ngapp/src/app/teacher/student-list/student-list.component.html
+++ b/ngapp/src/app/teacher/student-list/student-list.component.html
@@ -38,8 +38,7 @@
   <!-- No students message -->
   <ng-template #noStudentsMessage>
     <div class="noStudentsMessage">
-      Click on the 'Share Code' button to get the classroom code. Your students
-      can use this code to join the classroom.
+      {{ts.l.click_on_share_code_button}}
     </div>
   </ng-template>
   <!-- STORY FEEDBACK DRAWER -->
