--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.scss
@@ -132,8 +132,8 @@
 }
 
 .madeWithPrompts {
-    color: rgba(255, 255, 255, 0.4);
-    padding-left:5px
+    padding-left: 5px;
+    color: grey;
 }
 
 .seenByStudent {
