--- a/ngapp/src/app/student/feedback-drawer/feedback-drawer.component.scss
+++ b/ngapp/src/app/student/feedback-drawer/feedback-drawer.component.scss
@@ -1,7 +1,6 @@
 .feedbackHeader {
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 25px;
   height: 30px;
   background-color: var(--scealai-green);
   color: white;
