--- a/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.scss
+++ b/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.scss
@@ -27,6 +27,10 @@
     margin-top: 16px;
 }
 
+.copyBtn:hover {
+  cursor: pointer;
+}
+
 .titleInput {
     margin-top: 10px;
     padding-left: 4px;
