--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
@@ -16,12 +16,12 @@
     <div class="quillContainer">
       <quill-editor
         [disabled]="!isTeacher"
-        placeholder=""
         [preserveWhitespace]="true"
         [debounceTime]="1500"
         [(ngModel)]="storyTextWithMarkup"
         (onEditorCreated)="onEditorCreated($event)"
         (onSelectionChanged)=" isTeacher ? showInlineCommentButton($event) : null "
+        (onContentChanged)="updateFeedbackSentStatus()"
       >
         <!-- Toolbar styles: https://github.com/quilljs/quill/blob/f75ff2973f068c3db44f949915eb8a74faf162a8/docs/_includes/full-toolbar.html-->
         <div quill-editor-toolbar [hidden]="!isTeacher">
