dictogloss info for teachers

--- a/ngapp/src/app/teacher/teacher-dictogloss/teacher-dictogloss.component.html
+++ b/ngapp/src/app/teacher/teacher-dictogloss/teacher-dictogloss.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <i class="fa fa-info-circle" style="cursor:pointer; float:right;" (click)="openInformationDialog()"></i>
     <h1>{{ts.l.teacher_send_dictogloss}}</h1>
     <p>{{ts.l.teacher_send_dictogloss_info}}</p>
     <h5>{{ts.l.dictogloss_char_limit}}</h5>
