remove references to BackendMonitorComponent

--- a/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -28,9 +28,9 @@
       <div class="adminBtnContainer" routerLink="add-content">
         Add Content
       </div>
-      <div class="adminBtnContainer" routerLink="backend-monitor">
+      <a class="adminBtnContainer" href="/api/status">
         Backend Monitor
-      </div>
+      </a>
     </div>
   </div>
 
