--- a/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.scss
+++ b/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.scss
@@ -50,6 +50,10 @@
     border-radius: 5px;
 }
 
+a {
+    text-decoration: none;
+}
+
 .adminBtnContainer:hover {
     color: var(--orange-text);
     background-color: var(--scealai-med-brown-hover);
@@ -72,7 +76,3 @@
         padding: 10px;
     }
 }
-
-
-
-
