remove unneeded handlebars package

--- a/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/ngapp/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -28,9 +28,9 @@
       <div class="adminBtnContainer" routerLink="add-content">
         Add Content
       </div>
-      <a class="adminBtnContainer" href="/api/status">
+      <div class="adminBtnContainer" routerLink="backend-monitor">
         Backend Monitor
-      </a>
+      </div>
     </div>
   </div>
 
