--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -26,6 +26,23 @@ quill-editor > [quill-editor-element] {
     overflow-y: hidden;
 }
 
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 10px;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(200, 200, 200);
+}
+*::-webkit-scrollbar-track {
+    background-color: white;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: rgb(200, 200, 200) ;
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
 /* Hide the default checkbox */
 input[type="checkbox"] {
     appearance: none;
