Added a switch toggle to make synth enabled clearer

--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -87,9 +87,14 @@
     [class.optionsBtnClicked]="synthesisPlayButtonsEnabled"
     (click)="dontToggle = true; toggleSynthesisPlayButtons()"
   >
-  
-     {{ ts.l.audio_check }}
-    <i class="fas fa-volume-up optionsBtnIcon"></i>
+    <mat-slide-toggle
+      class="example-margin"
+      [color]="primary"
+      [checked]="checked"
+      [disabled]="disabled">
+        {{ ts.l.audio_check }}
+        <i class="fas fa-volume-up optionsBtnIcon"></i>
+    </mat-slide-toggle>
   </div>
 
   <!-- GRAMMAR CHECK -->
