Emph colour tweaking 🔧

--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -107,7 +107,7 @@ input[type="checkbox"] {
 }
 
 [synth-highlight-em] {
-    background: var(--scealai-light-green);  
+    background: rgb(176, 255, 207);  
 }
 
 .synthesis-button:hover {
