--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -39,22 +39,22 @@ quill-editor > [quill-editor-element] {
     overflow-y: hidden;
 }
 
-::-webkit-scrollbar {
-    background-color: transparent;
-    width: 10px;
-}
-* {
-    scrollbar-width: thin;
-    scrollbar-color: rgb(200, 200, 200);
-}
-*::-webkit-scrollbar-track {
-    background-color: white;
-}
-*::-webkit-scrollbar-thumb {
-    background-color: rgb(200, 200, 200) ;
-    border-radius: 20px;
-    border: 3px solid white;
-}
+// ::-webkit-scrollbar {
+//     background-color: transparent;
+//     width: 10px;
+// }
+// * {
+//     scrollbar-width: thin;
+//     scrollbar-color: rgb(200, 200, 200);
+// }
+// *::-webkit-scrollbar-track {
+//     background-color: white;
+// }
+// *::-webkit-scrollbar-thumb {
+//     background-color: rgb(200, 200, 200) ;
+//     border-radius: 20px;
+//     border: 3px solid white;
+// }
 
 [synth-highlight] {
     background: rgb(219, 236, 226);
